--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ go:
 before_install:
   # print go version
   - go version && go env
-
+  - curl -sSL -o /tmp/ci_functions https://raw.githubusercontent.com/westmisfit/ci_functions/1.0.2/functions.sh; source /tmp/ci_functions
 install:
   
 
 script:
   - go run command/main.go
-  - curl -X GET "http://localhost:8082/ping"
+  - checkHealth "http://localhost:8082/ping"
 
 notifications:
   email:
