--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
   # - make test
   # dist and build docker image
   - >
+    docker images
     docker build -t $DOCKER_IMAGE:latest . &&
     docker tag $DOCKER_IMAGE:latest $DOCKER_IMAGE:$DOCKER_TAG
   # run container
